--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "autoprefixer": "^10.4.19",
-    "eslint": "^9.4.0",
+    "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.6.2"
+  },
+  "overrides": {
+    "eslint": "8.57.0"
   }
 }
