--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "lucide-react": "^0.542.0",
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1"
